syntax = "proto3";

package vulture.service.rpc;

import "google/protobuf/empty.proto";

option go_package = "github.com/vulturedb/vulture/service/rpc";

message MSTChild {
  bytes key = 1;
  bytes value = 2;
  bytes high = 3;
}

message MSTNode {
  uint32 level = 1;
  bytes low = 2;
  repeated MSTChild children = 3;
}

message MSTPutRequest {
  uint32 key = 1;
  uint32 value = 2;
}

message MSTGetRequest {
  uint32 key = 1;
}

message MSTGetResponse {
  uint32 value = 1;
}

service MSTService {
  rpc Put(MSTPutRequest) returns (google.protobuf.Empty) {}
  rpc Get(MSTGetRequest) returns (MSTGetResponse) {}
}

message MSTGossipRequest {
  bytes root_hash = 1;
}

message MSTGetNodesRequest {
  repeated bytes hashes = 1;
}

message MSTGetNodesResponse {
  repeated MSTNode nodes = 1;
}

service MSTManagerService {
  rpc Gossip(MSTGossipRequest) returns (google.protobuf.Empty) {}
  rpc GetNodes(MSTGetNodesRequest) returns (MSTGetNodesResponse) {}
}
